Fixed button wrap spacing.

--- a/packages/inkline.io/components/CodePreview/style.scss
+++ b/packages/inkline.io/components/CodePreview/style.scss
@@ -117,4 +117,14 @@
             width: 100%;
         }
     }
+
+    &.-button-code-preview .panel.-default {
+        margin-left: -2px;
+        margin-right: -2px;
+
+        /deep/ .button {
+            margin-left: 2px;
+            margin-right: 2px;
+        }
+    }
 }
